TestSuite/errors/err0249.pas
uses System.Runtime.InteropServices;

type
  [StructLayout(LayoutKind.&Explicit)]
  t1<T>=record
    
  end;

begin end.